--- a/benchmarkbot/package.json
+++ b/benchmarkbot/package.json
@@ -6,6 +6,7 @@
   "author": "iannl",
   "license": "AGPL-3.0-only",
   "dependencies": {
-    "colors": "^1.4.0"
+    "colors": "^1.4.0",
+    "fs-extra": "^11.2.0"
   }
 }
