Add command line support
Added command line support for BenchmarkBot. BenchmarkBot can now be installed globally and ran with the command "bb". Also added an install script.

--- a/benchmarkbot/package.json
+++ b/benchmarkbot/package.json
@@ -2,7 +2,9 @@
   "name": "benchmarkbot",
   "version": "1.0.0",
   "main": "index.js",
-  "bin": "index.js",
+  "bin":  {
+    "bb":"index.js"
+  },
   "author": "iannl",
   "license": "AGPL-3.0-only",
   "dependencies": {
