--- a/.github/workflows/changed.yml
+++ b/.github/workflows/changed.yml
@@ -24,6 +24,6 @@ jobs:
     - uses: actions/checkout@v4
     - uses: dorny/paths-filter@v3
       id: filter
-      width:
+      with:
         filters: .github/filters.yml
         token: $ {{ github.token }}
