But I want it to run on ubutnu

--- a/.github/workflows/changed.yml
+++ b/.github/workflows/changed.yml
@@ -14,7 +14,7 @@ on:
 
 jobs:
   changed:
-    runs-on: ubutnu-latest
+    runs-on: ubuntu-latest
     outputs:
       docs: ${{ steps.filter.outputs.docs }}
       code: ${{ steps.filter.outputs.code }}
