--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,9 +25,22 @@ jobs:
     - uses: actions/setup-node@v4
       with:
         node-version: 18
+    - uses: actions/setup-go@v5
     - uses: actions/setup-python@v5
       with:
         python-version: 3
+    - name: Install Lua
+      run: sudo apt install lua5.4
+    - uses: actions/setup-java@v4
+      with:
+        java-version: 22
+    - uses: egor-tensin/setup-clang@v1
+      with:
+        version: latest
+    - uses: egor-tensin/setup-gcc@v1
+      with:
+        version: latest
+    - uses: ruby/setup-ruby@v1
     - name: Install BenchmarkBot
       run: npm i -g benchmarkbot
     - name: Run Benchmarks
