--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,6 +34,7 @@ jobs:
     - uses: actions/setup-java@v4
       with:
         java-version: 22
+        distribution: oracle
     - uses: egor-tensin/setup-clang@v1
       with:
         version: latest
