--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,6 +42,7 @@ jobs:
       with:
         version: latest
     - uses: ruby/setup-ruby@v1
+      with:
         ruby-version: 3.3
     - name: Install BenchmarkBot
       run: npm i -g benchmarkbot
